--- a/src/app/phone-book/phone-book.component.html
+++ b/src/app/phone-book/phone-book.component.html
@@ -1,1 +1,10 @@
-<p>phone-book works!</p>
+<div class="phone-book">
+  <mat-tab-group backgroundColor="primary">
+    <mat-tab label="All Contacts">
+      <app-contact-list />
+    </mat-tab>
+    <mat-tab label="Add Contacts">
+      <app-create-contact />
+    </mat-tab>
+  </mat-tab-group>
+</div>
