create-contact static form

--- a/src/app/components/contact-list/contact-list.component.html
+++ b/src/app/components/contact-list/contact-list.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" #contactTable>
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef>No.</th>
     <td mat-cell *matCellDef="let element">{{ element.id }}</td>
