--- a/src/app/components/create-contact/create-contact.component.html
+++ b/src/app/components/create-contact/create-contact.component.html
@@ -1,1 +1,53 @@
-<p>create-contact works!</p>
+<form class="create-contact-form">
+  <mat-form-field appearance="outline">
+    <mat-label>First Name</mat-label>
+    <input matInput placeholder="First Name">
+  </mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>Last Name</mat-label>
+    <input matInput placeholder="Last Name">
+  </mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>Gender</mat-label>
+    <mat-select>
+      <mat-option value="male">Male</mat-option>
+      <mat-option value="female">Female</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-divider></mat-divider>
+  <mat-form-field appearance="outline">
+    <mat-label>Email Address</mat-label>
+    <input matInput placeholder="Email Address" type="email">
+  </mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>Choose a date</mat-label>
+    <input matInput [matDatepicker]="picker">
+    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>Education</mat-label>
+    <mat-select>
+      <mat-option value="no-degree">No Degree</mat-option>
+      <mat-option value="associates">Associates Degree</mat-option>
+      <mat-option value="bachelors">Bachelors Degree</mat-option>
+      <mat-option value="masters">Masters Degree</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-divider></mat-divider>
+  <mat-form-field appearance="outline">
+    <mat-label>Company</mat-label>
+    <input matInput placeholder="Company">
+  </mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>Experience</mat-label>
+    <span matTextSuffix>&nbsp;yrs</span>
+    <input matInput placeholder="0" type="number" class="right-align-number-input">
+  </mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>&nbsp;&nbsp;&nbsp;Package</mat-label>
+    <input matInput type="number" class="right-align-number-input" placeholder="0">
+    <span matTextPrefix>$&nbsp;</span>
+    <span matTextSuffix>.00</span>
+  </mat-form-field>
+</form>
