--- a/src/app/components/create-contact/create-contact.component.html
+++ b/src/app/components/create-contact/create-contact.component.html
@@ -1,15 +1,15 @@
-<form class="create-contact-form">
+<form class="create-contact-form" [formGroup]="contactForm" (ngSubmit)="onCreate()">
   <mat-form-field appearance="outline">
     <mat-label>First Name</mat-label>
-    <input matInput placeholder="First Name">
+    <input matInput placeholder="First Name" formControlName="firstname">
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>Last Name</mat-label>
-    <input matInput placeholder="Last Name">
+    <input matInput placeholder="Last Name" formControlName="lastname">
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>Gender</mat-label>
-    <mat-select>
+    <mat-select formControlName="gender">
       <mat-option value="male">Male</mat-option>
       <mat-option value="female">Female</mat-option>
     </mat-select>
@@ -17,17 +17,17 @@
   <mat-divider></mat-divider>
   <mat-form-field appearance="outline">
     <mat-label>Email Address</mat-label>
-    <input matInput placeholder="Email Address" type="email">
+    <input matInput placeholder="Email Address" type="email" formControlName="email">
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>Choose a date</mat-label>
-    <input matInput [matDatepicker]="picker">
+    <input matInput [matDatepicker]="picker" formControlName="dob">
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>Education</mat-label>
-    <mat-select>
+    <mat-select formControlName="education">
       <mat-option value="no-degree">No Degree</mat-option>
       <mat-option value="associates">Associates Degree</mat-option>
       <mat-option value="bachelors">Bachelors Degree</mat-option>
@@ -37,17 +37,20 @@
   <mat-divider></mat-divider>
   <mat-form-field appearance="outline">
     <mat-label>Company</mat-label>
-    <input matInput placeholder="Company">
+    <input matInput placeholder="Company" formControlName="company">
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>Experience</mat-label>
     <span matTextSuffix>&nbsp;yrs</span>
-    <input matInput placeholder="0" type="number" class="right-align-number-input">
+    <input matInput placeholder="0" type="number" class="right-align-number-input" formControlName="exp">
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>&nbsp;&nbsp;&nbsp;Package</mat-label>
-    <input matInput type="number" class="right-align-number-input" placeholder="0">
+    <input matInput type="number" class="right-align-number-input" placeholder="0" formControlName="pkg">
     <span matTextPrefix>$&nbsp;</span>
     <span matTextSuffix>.00</span>
   </mat-form-field>
+  <mat-divider></mat-divider>
+  <button mat-flat-button color="primary" type="submit" [disabled]="contactForm.invalid">Create</button>
+  <button mat-flat-button color="primary" (click)="onClear($event)">Clear Form</button>
 </form>
